# RABBIT

./: .gitignore  CMakeLists.txt  LICENSE  RABBIT.pro
PROJECT/code/: main.cpp
PROJECT/code/src/: carlier.cpp  carlier.h  permutacja.h  proces.cpp  proces.h
PROJECT/tests/src/: ut_prmtS.cpp  ut_schrage.cpp
